# CMandelbrot

./: .gitignore  CMakeLists.txt  README.md  a.out  build.sh  main.c
